# GradientEquillibrum

./: README.md  example.py  pyproject.toml
ge/: __init__.py  main.py
